--- a/index.html
+++ b/index.html
@@ -10,21 +10,6 @@
 
 <body>
     <main>
-        <div id="contactLinks">
-            <div class="contactLink"><a href="https://www.instagram.com/gajraj_chakrawarti_12/"><img src="instagram.png"
-                        alt="instagram" id="instagram" class="img"></a></div>
-            <div class="contactLink"><a href="https://www.facebook.com/gajrajchakrawarti12"><img src="facebook.png"
-                        alt="facebook" id="facebook" class="img"></a></div>
-            <div class="contactLink"><a href="https://wa.me/qr/HBXBMXPYCLECN1"><img src="whatsapp.png" alt="whatsapp"
-                        id="whatsapp" class="img"></a></div>
-            <div class="contactLink"><a href="https://github.com/gajraj-chakrawarti-12"><img src="github.png"
-                        alt="github" class="img"></a></div>
-            <div class="contactLink"><a href="https://www.linkedin.com/in/gajraj-chakrawarti-356298297"><img
-                        src="linkedin.png" alt="linkedin" id="linkedin" class="img"></a></div>
-            <div class="contactLink"><a
-                    href="https://www.snapchat.com/add/chakravarti6687?share_id=ePaXTK3In34&locale=en-US"><img
-                        src="snapchat.png" alt="snapchat" id="snapchat" class="img"></a></div>
-        </div>
         <div id="frame">
             <div id="profilePic">
                 <img src="img_001.jpg" alt="GAJRAJ_PHOTO" id="pic">
@@ -33,20 +18,49 @@
                 GAJRAJ CHAKRAWARTI
             </div>
         </div>
-        <div id="datails">
-            <section>
-                <p>
-                    ATTENDING AT :
-                </p>
-                <p>
-                    SAMRAT ASHOK TECHNOLOGICAL INSTITUTE VIDISHA, MADHYA PRADESH, INDIA
-                </p>
-                <P>
-                    COMPUTER SCIENCE & ENGINEERING WITH BLOCK CHAIN TECHNOLOGY
-                </P>
-            </section>
+        <div id="collage">
+            <div id="img_004">
+                <img src="img_004.png" alt="SATI" style="width:160px; height: 200px; padding: 6px 0px 6px 0px;">
+            </div>
+            <div id="datails">
+                <section>
+                    <br>
+                    <p style=" font-family: 'Times New Roman', serif; text-align: center;">
+                        ATTENDING AT
+                    </p>
+                    <hr>
+                    <br>
+                    <p style="font-family: 'lucida Handwriting', cursive;">
+                        SAMRAT ASHOK TECHNOLOGICAL INSTITUTE
+                        VIDISHA, MADHYA PRADESH, INDIA
+                    </p>
+                    <br>
+                    <hr>
+                    <br>
+                    <p style="font-family: 'brush script std', cursive;">
+                        COMPUTER SCIENCE & ENGINEERING &nbsp; WITH BLOCK CHAIN TECHNOLOGY
+                    </p><br>
+                </section>
+            </div>
         </div>
+
     </main>
+    <div id="contactLinks">
+        <p></p>
+        <div class="contactLink"><a href="https://www.instagram.com/gajraj_chakrawarti_12/"><img src="instagram.png"
+                    alt="instagram" id="instagram" class="img"></a></div>
+        <div class="contactLink"><a href="https://www.facebook.com/gajrajchakrawarti12"><img src="facebook.png"
+                    alt="facebook" id="facebook" class="img"></a></div>
+        <div class="contactLink"><a href="https://wa.me/qr/HBXBMXPYCLECN1"><img src="whatsapp.png" alt="whatsapp"
+                    id="whatsapp" class="img"></a></div>
+        <div class="contactLink"><a href="https://github.com/gajraj-chakrawarti-12"><img src="github.png" alt="github"
+                    class="img"></a></div>
+        <div class="contactLink"><a href="https://www.linkedin.com/in/gajraj-chakrawarti-356298297"><img
+                    src="linkedin.png" alt="linkedin" id="linkedin" class="img"></a></div>
+        <div class="contactLink"><a
+                href="https://www.snapchat.com/add/chakravarti6687?share_id=ePaXTK3In34&locale=en-US"><img
+                    src="snapchat.png" alt="snapchat" id="snapchat" class="img"></a></div>
+    </div>
     <footer>
         <div>THANKING YOU FOR VISITING</div>
     </footer>
